--- a/SendEmailsWithAspDotNetCore/appsettings.json
+++ b/SendEmailsWithAspDotNetCore/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "MailSettings": {
-    "Mail": "<imrursohani@gmail.com>",
+    "Mail": "<abc@gmail.com>",
     "DisplayName": "<imrur sohani>",
-    "Password": "<imrur0123>",
+    "Password": "<abc>",
     "Host": "smtp.gmail.com",
     "Port": 465
   }
