--- a/SendEmailsWithAspDotNetCore/appsettings.json
+++ b/SendEmailsWithAspDotNetCore/appsettings.json
@@ -7,12 +7,22 @@
     }
   },
   "AllowedHosts": "*",
+  //https://codewithmukesh.com/blog/send-emails-with-aspnet-core/
   "MailSettings": {
-    "Mail": "<abc@gmail.com>",
-    "DisplayName": "<imrur sohani>",
-    "Password": "<abc>",
+    "Mail": "abc@gmail.com",
+    "DisplayName": "abc abc",
+    "Password": "abc",
     "Host": "smtp.gmail.com",
-    "Port": 465
+    "Port": 587
   }
+  //https://mailtrap.io/
+  //"MailSettings": {
+  //  "Mail": "e08be43a14e85d",
+  //  "DisplayName": "Emmie Becker",
+  //  "Password": "e72dca0cef5da3",
+  //  "Host": "smtp.mailtrap.io",
+  //  "Port": 2525
+  //}
 }
-//https://codewithmukesh.com/blog/send-emails-with-aspnet-core/
+
+
