--- a/SendEmailsWithAspDotNetCore/SendEmailsWithAspDotNetCore.csproj
+++ b/SendEmailsWithAspDotNetCore/SendEmailsWithAspDotNetCore.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.1.1" />
     <PackageReference Include="MimeKit" Version="3.1.1" />
-    <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
   </ItemGroup>
 
 </Project>
